syntax = "proto3";

package pb;


option go_package = "github.com/Iowel/app-auth-service/pkg/pb";

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}


message RegisterResponsePayload {
    bool error = 1;
    string message = 2;
}

