syntax = "proto3";

package pb;



option go_package = "github.com/Iowel/app-auth-service/pkg/pb";



message VerifyTokenRequest {

}


message VerifyTokenResponse {
  bool error = 1;
  string message = 2;
}


